[package]
name = "rustration"
version = "0.1.0"
edition = "2021"

default-run = "server"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
clap = { version = "4.4.8", features = ["derive"] }
env_logger = "0.10.1"
image = "0.24.7"
log = "0.4.20"
serde = { version = "1.0.192", features = ["derive"] }

[dependencies.uuid]
version = "1.6.1"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
